--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Our Reviews</h1>
             <div class="review col-lg-6 ">
                 <div class="img-container">
-                    <img class="author-img" src="../img/blog-page-03-img12.jpg" alt="">
+                    <img class="author-img" src="" alt="">
                     <div class="quote">
                         <i class='fas fa-quote-right'></i>
                     </div>
@@ -31,7 +31,7 @@
                         <i class="fas fa-chevron-right"></i>
                     </div>
                 </div>
-                <button class="random-button">Surprize me!</button>
+                <button class="random-button">Surprise me!</button>
             </div>
         </div>
         <script src="js/bootstrap.bundle.min.js"></script>
